# basic-myanimelist-crawler

./: Cargo.toml  LICENSE  README.md
src/: anime.rs  config.rs  dns.rs  main.rs  requester.rs  trie.rs
src/dns/: buffer.rs  dns_packet.rs
