[package]
name = "anime-crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["blocking"]}
chrono  = {version = "0.4"}
# tokio   = {version = "1", features = ["full"]}
